# galaxy

./: .gitignore  CMakeLists.txt  README.md  autosave.sav  galaxy.cbp  galaxy.depend  main.cpp  star.hpp  vertex_wrapper.hpp
extlib/: CMakeLists.txt
include/engine/: ship.hpp  vertex_wrapper.hpp
src/: main.cpp
